saint-lascivious.github.io: revert e9b1fab
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - deleted:    resources/javascript/.formatted/motion_sickness.min.js
 - deleted:    resources/javascript/motion_sickness.min.js
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -103,8 +103,6 @@
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_mono_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/motion_sickness.min.js">
-    <script type="text/javascript" src="resources/javascript/motion_sickness.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
@@ -141,7 +139,7 @@
     <link rel="dns-prefetch" href="munin-monitoring.org">
     <link rel="dns-prefetch" href="www.reddit.com">
   </head>
-  <body class="motion-sickness">
+  <body>
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
