--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -89,8 +89,6 @@
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_mono_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/motion_sickness.min.js">
-    <script type="text/javascript" src="resources/javascript/motion_sickness.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
@@ -118,7 +116,7 @@
     <link rel="dns-prefetch" href="github.com">
     <link rel="dns-prefetch" href="www.reddit.com">
   </head>
-  <body class="motion-sickness">
+  <body>
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
