--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -166,7 +166,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="#archivedposts"><b>Archived Posts</b></a><br><a class="embiggen" href="#2022metrics">2022 Metrics</a>, <a class="embiggen" href="#munin-pihole-plugins-v08-02-00">Munin Pi-hole Plugins: 08.02.00</a>, <a class="embiggen" href="#reportingproblems">Reporting Problems</a>, <a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="#archivedposts"><b>Archived Posts</b></a>
             </div>
           </div>
         </div>
