--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -160,7 +160,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a class="embiggen" href="#androidprivatedns">Android Private DNS</a>, <a class="embiggen" href="#appleiosmacos">Apple iOS/MacOS</a>, <a class="embiggen" href="#googlechromechromium">Google Chrome/Chromium</a>, <a class="embiggen" href="#mozillafirefox">Mozilla Firefox</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a>
             </div>
           </div>
         </div>
