--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -166,7 +166,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="devdiary.html"><b>Dev Diary</b></a><br><a class="embiggen" href="#devdiaryidliketothinkimprettyprogressive">Dev Diary: I’d Like to Think I’m Pretty Progressive</a>, <a class="embiggen" href="#devdiarygottagofast">Dev Diary: Gotta Go Fast!</a>, <a class="embiggen" href="#devdiarygoingoffline">Dev Diary: Going Offline</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="devdiary.html"><b>Dev Diary</b></a>
             </div>
           </div>
         </div>
