--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -179,7 +179,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates"><b>News and Updates</b></a><br><a class="embiggen" href="#somepunaboutblocksorblocking">Some Pun About Blocks or Blocking</a>, <a class="embiggen" href="#thepolishinvasionof2023">The Polish Invasion of 2023</a>, <a class="embiggen" href="#certaindoom">CERTain Doom</a>, <a class="embiggen" href="#enablejavascript">Enable JavaScript</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="archive.html">Archived Posts</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates"><b>News and Updates</b></a>
             </div>
           </div>
         </div>
