--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -146,7 +146,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#projects"><b>Popular Projects</b></a><br><a class="embiggen" href="#dnsproxy-config">dnsproxy config</a>, <a class="embiggen" href="#haha_cache_go_brrr">haha cache go brrr</a>, <a class="embiggen" href="#munin-pihole-plugins">munin pihole plugins</a>, <a class="embiggen" href="#saint-lascivious_github_io">sainternet.xyz</a>, <a class="embiggen" href="#unbound-config">unbound config</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#projects"><b>Popular Projects</b></a>
             </div>
           </div>
         </div>
