--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -160,7 +160,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#testsainternet"><b>Test Sainternet</b></a><br><a class="embiggen" href="#usingdig">Using dig</a>, <a class="embiggen" href="#usingdnslookup">Using dnslookup</a>, <a class="embiggen" href="#usingnslookup">Using nslookup</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#testsainternet"><b>Test Sainternet</b></a>
             </div>
           </div>
         </div>
