--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -156,7 +156,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#yourispisokwiththis">Your ISP Is OK with This?</a>, <a class="embiggen" href="#whatswithalltherainbows">What’s with All the Rainbows?</a>, <a class="embiggen" href="#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a>, <a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a>
             </div>
           </div>
         </div>
