saint-lascivious.github.io: preload primary icons and fonts
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -77,6 +77,13 @@
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
+    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/webfonts/fa-solid-900.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v140/Material-Icons.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Bold.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Medium.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Regular.woff2">
+
     <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/console_wrapper.min.js">
