--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -77,6 +77,13 @@
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
+    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/webfonts/fa-solid-900.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v140/Material-Icons.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Bold.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Medium.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/v30/Roboto-Regular.woff2">
+
     <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/console_wrapper.min.js">
